--- a/src/style/Landing.css
+++ b/src/style/Landing.css
@@ -3,6 +3,14 @@
   padding: 0;
 }
 .Landing-page {
+  display: flex;
+  flex-direction: column;
+  border: 3px solid orange;
+  justify-content: center;
+  align-items: center;
+  padding-top: 2em;
+}
+.Landing-page-cover {
   border: 2px solid green;
   margin: 2em;
   display: flex;
