--- a/src/style/ListMovies.css
+++ b/src/style/ListMovies.css
@@ -1,5 +1,29 @@
 .ListMovies {
+  width: 80%;
   display: grid;
-  grid-template-columns: 33% 33% 33%;
+  grid-template-columns: 20% 20% 20% 20% 20%;
   margin: auto;
+}
+@media screen and (max-width: 1300px) {
+  .ListMovies {
+    grid-template-columns: 25% 25% 25% 25%;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .ListMovies {
+    grid-template-columns: 33% 33% 33%;
+    width: 90%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .ListMovies {
+    grid-template-columns: 50% 50%;
+    width: 95%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .ListMovies {
+    grid-template-columns: 100%;
+    width: 95%;
+  }
 }
