--- a/src/style/MovieCard.css
+++ b/src/style/MovieCard.css
@@ -1,8 +1,8 @@
 .MovieCard {
-  margin: 1em;
-  /* width: 100%; */
+  margin: 0.5em;
+  /* width: 95%; */
   height: 90%;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   padding: 0;
   margin-bottom: 1em;
 }
